UX: spacing fixes

--- a/assets/stylesheets/common/discourse-post-event.scss
+++ b/assets/stylesheets/common/discourse-post-event.scss
@@ -70,8 +70,7 @@ $show-interested: inherit;
     column-gap: 1em;
     display: flex;
     align-items: flex-start;
-    padding: 0.5em 1em;
-    margin-top: 0.5em;
+    padding: 0.75em;
 
     .more-dropdown {
       margin-left: auto;
@@ -141,7 +140,6 @@ $show-interested: inherit;
       font-size: var(--font-up-2);
       font-weight: 400;
       white-space: initial;
-      margin-bottom: 0.25rem;
     }
     .status-and-creators {
       display: flex;
@@ -195,13 +193,13 @@ $show-interested: inherit;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5em 1em;
+    padding: 0.75em;
     flex-wrap: wrap;
     border-top: 1px solid var(--primary-low);
 
     &.event-status {
       margin: 0;
-      gap: 0.5em;
+      gap: 0.75em;
       .btn {
         flex: 1;
       }
@@ -231,7 +229,7 @@ $show-interested: inherit;
   }
 
   .event-invitees {
-    height: 1.5em;
+    min-height: 1.75em;
     display: flex;
     align-items: flex-start;
     justify-content: center;
